Fix img carousel btns

--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -40,6 +40,10 @@ $list-subtitle-clr: #b2b2b2;
 //User msg colors
 $shadow-clr: #b2b3b681;
 
+
+//Img Carousel
+$arrow-btn-size: 48px;
+
 // Breakpoints
 $mobile-breakpoint: 460px;
 $narrow-breakpoint: 720px;
