--- a/src/assets/styles/views/GigDetails.scss
+++ b/src/assets/styles/views/GigDetails.scss
@@ -90,6 +90,7 @@
             border: 0;
             filter: blur(0.6px);
             opacity: 0.5;
+            cursor: pointer;
 
             &.selected {
                 filter: none;
