Change gig-preview styling

--- a/src/assets/styles/cmps/GigList.scss
+++ b/src/assets/styles/cmps/GigList.scss
@@ -4,9 +4,27 @@
     grid-gap: em(32px);
 
     .gig-preview {
+        max-height: rem(362px);
+        max-width: rem(326px);
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        justify-content: space-between;
+
+        .img-container {
+            width: 100%;
+            height: 55%;
+
+            .gig-img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                border: 1px solid #e4e5e7;
+                border-radius: 8px;
+                margin-bottom: rem(7px);
+                cursor: pointer;
+            }
+        }
 
         &:hover {
             .owner-gig-title {
@@ -14,14 +32,6 @@
             }
         }
 
-        div .gig-img {
-            border: 1px solid #e4e5e7;
-            border-radius: 8px;
-            height: 11em;
-            width: rem(292px);
-            margin-bottom: rem(7px);
-            cursor: pointer;
-        }
     }
 
 
