Add fixed size to img-carousel thumb

--- a/src/assets/styles/views/GigDetails.scss
+++ b/src/assets/styles/views/GigDetails.scss
@@ -87,6 +87,7 @@
     .thumbs {
 
         .thumb {
+            height: rem(60px);
             border: 0;
             filter: blur(0.6px);
             opacity: 0.5;
