--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -21,7 +21,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    // font-family: Macan, "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
     line-height: 1;
 }
