Style error-msg

--- a/src/assets/styles/cmps/UserMsg.scss
+++ b/src/assets/styles/cmps/UserMsg.scss
@@ -40,5 +40,9 @@
 }
 
 .user-msg.error {
-    background-color: rgb(216, 59, 59);
+    border-inline-start: 7px solid $error-clr;
+
+    .x-icon {
+        color: $error-clr;
+    }
 }
