--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -12,6 +12,7 @@ $light-clr3: #fafafa;
 $light-clr2: #e4e5e7;
 $light-clr1: #f5f5f5;
 $light-clr: #fff;
+$error-clr: #a33030da;
 
 //Modal Colors
 $modal-underline-clr: #efeff0;
