adding a slick libarary carosel in home page

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -54,3 +54,4 @@
 @import "cmps/RadioButton.scss";
 @import "cmps/OrderList.scss";
 @import "cmps/LoginSignup.scss";
+@import "cmps/SimpleSlider.scss";
