--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -55,3 +55,4 @@
 @import "cmps/OrderList.scss";
 @import "cmps/LoginSignup.scss";
 @import "cmps/SimpleSlider.scss";
+@import "cmps/Dropdown.scss";
