--- a/src/assets/styles/cmps/OrderList.scss
+++ b/src/assets/styles/cmps/OrderList.scss
@@ -27,6 +27,10 @@
             padding: 15px;
             border-block: 1px solid $modal-filter-border-clr;
 
+            i {
+                display: inline;
+            }
+
             &:not(:first-child):not(:last-child) {
                 color: $co-clr;
             }
