--- a/src/assets/styles/cmps/Dropdown.scss
+++ b/src/assets/styles/cmps/Dropdown.scss
@@ -5,6 +5,7 @@
     .drop-down-menu {
         position: absolute;
         left: 0;
+        z-index: 2;
         background-color: $dark-clr-2;
         padding: em(10px) 0;
         border-radius: em(6px);
