--- a/src/assets/styles/basics/_animations.scss
+++ b/src/assets/styles/basics/_animations.scss
@@ -9,3 +9,26 @@
         top: (4vh);
     }
 }
+
+@keyframes short-fade-in-down {
+    0% {
+        opacity: 0;
+        top: em(-10px);
+    }
+
+    28% {
+        opacity: 0.8;
+        top: em(20px);
+    }
+}
+
+@keyframes short-fade-out {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0.7;
+        top: em(-10px);
+    }
+}
