--- a/src/assets/styles/basics/_helpers.scss
+++ b/src/assets/styles/basics/_helpers.scss
@@ -37,6 +37,11 @@
     font-size: 14px;
 }
 
+.questionmark {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 600
+}
+
 // Media helpers
 
 .square-ratio {
