--- a/src/assets/styles/cmps/SimpleSlider.scss
+++ b/src/assets/styles/cmps/SimpleSlider.scss
@@ -1,3 +1,8 @@
 @import url(slick-carousel/slick/slick.css);
 @import url(slick-carousel/slick/slick-theme.css);
 
+// .slide {
+//     display: flex;
+//     justify-content: center;
+//     padding: 100px 0px;
+// }
