--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -56,3 +56,4 @@
 @import "cmps/LoginSignup.scss";
 @import "cmps/SimpleSlider.scss";
 @import "cmps/Dropdown.scss";
+@import "cmps/CategoryCard.scss";
