--- a/src/assets/styles/cmps/TrustedBy.scss
+++ b/src/assets/styles/cmps/TrustedBy.scss
@@ -8,7 +8,7 @@
         height: em(95px);
         align-items: center;
         // Temporary margin
-        // margin-block-end: 15vh;
+        margin-block-end: 15vh;
 
         span {
             font-size: 1rem;
