/F/CheckStatus/Colors the text according to the condition

--- a/src/assets/styles/cmps/Dropdown.scss
+++ b/src/assets/styles/cmps/Dropdown.scss
@@ -34,24 +34,28 @@
             text-align: center;
             transition: background-color 0.4s, color 0.4s;
             font-weight: 700;
-
-            &:hover {
-                background-color: $dark-clr;
-                color: $light-clr;
-            }
-
-            &:first-child {
-                border-radius: 6px 6px 0 0;
-                padding-block-start: 5px;
-            }
-
-            &:last-child {
-                border-radius: 0 0 em(6px) em(6px);
-                padding-block-end: em(5px);
-            }
-
+            
             &:not(:last-child) {
                 border-block-end: 1px solid $dark-clr-3;
+
+                &:hover {
+                    color: $error-clr;
+                }
+
+                &:first-child {
+                    border-radius: 6px 6px 0 0;
+                    padding-block-start: 5px;
+
+                    &:hover {
+                        color: $accent-clr;
+                    }
+                }
+
+                &:last-child {
+                    border-radius: 0 0 em(6px) em(6px);
+                    padding-block-end: em(5px);
+                }
+
             }
 
             .action {
