--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -13,6 +13,8 @@ $light-clr2: #e4e5e7;
 $light-clr1: #f5f5f5;
 $light-clr: #fff;
 $error-clr: #a33030da;
+$fulfilled-clr: #195dc2;
+$pending-clr: #e7bd32;
 
 //Modal Colors
 $modal-underline-clr: #efeff0;
