finished to do the carousel in home page

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -79,3 +79,15 @@ a:visited {
         @include owner-profile-img($type: large);
     }
 }
+
+.gallry-btn{
+    @include gallry-btn;
+    
+    &-next {
+        @include gallry-btn($type: next);
+    }
+
+    &-prev {
+        @include gallry-btn($type: prev);
+    }
+}
