Fix header position acording to location path

--- a/src/assets/styles/cmps/CategoryNav.scss
+++ b/src/assets/styles/cmps/CategoryNav.scss
@@ -6,6 +6,9 @@
     top: em(84px);
     background-color: $light-clr;
 
+    &.static {
+        position: static;
+    }
 
     &.transparent {
         display: none;
