--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -7,6 +7,10 @@
     background-color: $light-clr;
     transition: background-color 0.6s, border-color 0.6s;
 
+    &.static {
+        position: static;
+    }
+
     &.transparent {
         background-color: transparent;
         border: 0;
