--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -6,6 +6,7 @@ $dark-clr: #404145;
 $dark-clr-1: #62646a;
 $dark-clr-2: lighten(#62646a, 50%);
 $dark-clr-3: #95979d;
+$dark-clr-4: #74767e;
 
 $light-clr4: #efeff0;
 $light-clr3: #fafafa;
