Change dropdown menu styling

--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -147,33 +147,34 @@
 
                     .drop-down-menu {
                         animation: none;
-                        top: 135%;
-                        border: em(1px) solid $dark-clr-2;
+                        top: 140%;
+                        border: em(2px) solid $dark-clr-2;
                         padding-inline: em(10px);
-                        box-shadow: 1px 1px 3px $dark-clr-4;
+                        box-shadow: none;
+                        border-radius: 0;
 
 
                         &::before,
                         &::after {
                             content: '';
                             position: absolute;
-                            right: em(7px);
+                            right: em(5px);
                             width: 0;
                             height: 0;
-                            border-left: em(8px) solid transparent;
-                            border-right: em(8px) solid transparent;
+                            border-left: em(10px) solid transparent;
+                            border-right: em(10px) solid transparent;
                             clear: both;
                             transform: rotateX(180deg);
                         }
 
                         &::before {
-                            border-top: em(8px) solid $dark-clr-2;
-                            top: em(-8px);
+                            border-top: em(10px) solid $dark-clr-2;
+                            top: em(-10px);
                         }
 
                         &::after {
-                            top: em(-6.5px);
-                            border-top: em(8px) solid $light-clr;
+                            top: em(-7.5px);
+                            border-top: em(10px) solid $light-clr;
                         }
                     }
 
