/F/DashboardModal/A comprehensive presentation of sales

--- a/src/assets/styles/views/HomePage.scss
+++ b/src/assets/styles/views/HomePage.scss
@@ -1,7 +1,7 @@
 .home {
     .title-slide{
         margin-block-start: rem(96px);
-        padding-block-end: rem(24px);
+        // padding-block-end: rem(24px);
         // font-weight: 700;
         line-height: rem(38.4px)
     }
