--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -53,6 +53,10 @@ a {
     cursor: pointer;
 }
 
+button {
+    font-family: Macan, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 .star {
     width: 1em;
 }
