--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -57,3 +57,4 @@
 @import "cmps/SimpleSlider.scss";
 @import "cmps/Dropdown.scss";
 @import "cmps/CategoryCard.scss";
+@import "cmps/DashboardModal.scss";
